# cfdns

./: Cargo.toml  README.md
assets/: cfdns.service  cfdns.timer
src/: cache.rs  cloudflare.rs  config.rs  main.rs  netlink.rs  networking.rs  weblookup.rs
src/commands/: edit.rs  mod.rs  schedule.rs  setup.rs  show.rs  update.rs
