[package]
name = "cfdns"
version = "0.1.0"
authors = ["Matthew Lyon <matthew@lyon.systems>"]
license = "Apache-2.0"
description = "A Cloudflare Dynamic DNS update tool"
readme = "README.md"
homepage = "https://github.com/MatthewIsHere/cfdns"
repository = "https://github.com/MatthewIsHere/cfdns"
keywords = ["cli", "dns", "cloudflare", "ddns", "tool"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
addr = "0.15.6"
clap = { version = "4.5.41", features = ["derive"] }
cloudflare = "0.14.0"
directories = "6.0.0"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json"] }
rtnetlink = "0.18.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
colored = "2.2.0"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
inquire = { version = "0.9.1", features = ["editor"] }
miette = { version = "7.6.0", features = ["fancy"] }
indicatif = "0.18.3"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true
